<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PengantarForm">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PENGANTAR"
        android:textSize="35dp"
        android:textColor="#6437A0"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtForm"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FORM"
        android:textSize="35dp"
        android:textColor="#6437A0"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvNamePengantar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="#6437A0"
        android:textSize="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="#6437A0"
        app:boxStrokeWidth="3dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvNamePengantar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaPengantar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Name"
            android:text=""/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvNoTelpPengantar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone Number"
        android:textColor="#6437A0"
        android:textSize="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/til_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_noTelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/black"
        android:hint="Phone Number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="#6437A0"
        app:boxStrokeWidth="3dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvNoTelpPengantar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNoTelpPengantar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddPengantar"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="ADD"
        android:textSize="18dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#6437A0"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/til_noTelp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>